--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-papaparse": "^3.0.0",
+    "react-resize-detector": "^4.2.1",
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5"
   },
