--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
     "material-ui-colors": "^1.0.0",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.13.0",
